# cvxrust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_lp.rs  lasso.rs  least_squares.rs  portfolio.rs  quadratic_program.rs
src/: lib.rs
src/atoms/: affine.rs  mod.rs
src/canon/: canonicalizer.rs
src/expr/: eval.rs  expression.rs  mod.rs
src/solver/: clarabel.rs  stuffing.rs
tests/: canon_tests.rs  eval_tests.rs  solver_tests.rs  sum_squares_tests.rs
