[package]
name = "cvxrust"
version = "0.1.0"
edition = "2021"
authors = ["CVXPY team"]
description = "A Rust implementation of Disciplined Convex Programming"
license = "Apache-2.0"
repository = "https://github.com/cvxpy/cvxrust"
documentation = "https://docs.rs/cvxrust"
keywords = ["optimization", "convex", "dcp", "solver", "math"]
categories = ["mathematics", "algorithms", "science"]
rust-version = "1.71"

[dependencies]
# Clarabel solver
clarabel = "0.9"

# Sparse matrices
nalgebra = "0.33"
nalgebra-sparse = "0.10"

# Error handling
thiserror = "2.0"

# Fast hash maps
rustc-hash = "2.0"

[dev-dependencies]
approx = "0.5"
rand = "0.8"

[features]
default = []
